# ghostpost_backend

./: db.sqlite3  pyproject.toml
ghostpost/: forms.py  models.py  serializers.py  settings.py  urls.py  views.py
ghostpost.egg-info/: PKG-INFO  SOURCES.txt
ghostpost/migrations/: 0001_initial.py  0002_auto_20200211_2052.py  0003_auto_20200326_2322.py  0004_auto_20200326_2324.py
ghostpost/templates/: index.html
